# SPDX-License-Identifier: MIT
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "mango_option_sys",
    srcs = ["src/lib.rs"],
    edition = "2021",
    deps = [
        "//src/ffi:mango_c_api",
        "//src/ffi:libgcc_cpuinfo",
        "//src/ffi:libstdcpp_static",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "layout_test",
    srcs = ["tests/layout.rs"],
    edition = "2021",
    deps = [":mango_option_sys"],
)
