# SPDX-License-Identifier: MIT
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "mango_option",
    srcs = [
        "src/error.rs",
        "src/interp.rs",
        "src/iv.rs",
        "src/lib.rs",
        "src/pricing.rs",
        "src/table.rs",
        "src/types.rs",
    ],
    edition = "2021",
    deps = ["//crates/mango-option-sys:mango_option_sys"],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "integration_test",
    srcs = ["tests/integration.rs"],
    edition = "2021",
    deps = [":mango_option"],
)

rust_test(
    name = "interpolation_test",
    srcs = ["tests/interpolation.rs"],
    edition = "2021",
    deps = [":mango_option"],
)
