load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "execution_space",
    hdrs = ["support/execution_space.hpp"],
    deps = ["@kokkos//:kokkos"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "grid",
    hdrs = ["pde/core/grid.hpp"],
    deps = [
        ":execution_space",
        "@kokkos//:kokkos",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "workspace",
    hdrs = ["pde/core/workspace.hpp"],
    deps = [
        ":execution_space",
        "@kokkos//:kokkos",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "thomas_solver",
    hdrs = ["math/thomas_solver.hpp"],
    deps = [
        ":execution_space",
        "@kokkos//:kokkos",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "black_scholes",
    hdrs = ["pde/operators/black_scholes.hpp"],
    deps = [
        ":execution_space",
        "@kokkos//:kokkos",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "pde_solver",
    hdrs = ["pde/core/pde_solver.hpp"],
    deps = [
        ":execution_space",
        ":grid",
        ":workspace",
        ":thomas_solver",
        "@kokkos//:kokkos",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_basis",
    hdrs = ["math/bspline_basis.hpp"],
    deps = [
        ":execution_space",
        "@kokkos//:kokkos",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "american_option",
    hdrs = ["option/american_option.hpp"],
    deps = [
        ":execution_space",
        ":grid",
        ":workspace",
        ":black_scholes",
        ":thomas_solver",
        "@kokkos//:kokkos",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_nd",
    hdrs = ["math/bspline_nd.hpp"],
    deps = [
        ":execution_space",
        ":bspline_basis",
        "@kokkos//:kokkos",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "batch_solver",
    hdrs = ["option/batch_solver.hpp"],
    deps = [
        ":execution_space",
        ":grid",
        ":workspace",
        ":black_scholes",
        ":thomas_solver",
        "@kokkos//:kokkos",
    ],
    visibility = ["//visibility:public"],
)
