load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "grid_test",
    srcs = ["grid_test.cc"],
    deps = [
        "//kokkos/src:grid",
        "@googletest//:gtest_main",
        "@kokkos//:kokkos",
    ],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
)

cc_test(
    name = "workspace_test",
    srcs = ["workspace_test.cc"],
    deps = [
        "//kokkos/src:workspace",
        "@googletest//:gtest_main",
        "@kokkos//:kokkos",
    ],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
)
