load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "grid_test",
    srcs = ["grid_test.cc"],
    deps = [
        "//kokkos/src:grid",
        "@googletest//:gtest_main",
        "@kokkos//:kokkos",
    ],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
)

cc_test(
    name = "workspace_test",
    srcs = ["workspace_test.cc"],
    deps = [
        "//kokkos/src:workspace",
        "@googletest//:gtest_main",
        "@kokkos//:kokkos",
    ],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
)

cc_test(
    name = "thomas_solver_test",
    srcs = ["thomas_solver_test.cc"],
    deps = [
        "//kokkos/src:thomas_solver",
        "@googletest//:gtest_main",
        "@kokkos//:kokkos",
    ],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
)

cc_test(
    name = "black_scholes_test",
    srcs = ["black_scholes_test.cc"],
    deps = [
        "//kokkos/src:black_scholes",
        "@googletest//:gtest_main",
        "@kokkos//:kokkos",
    ],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
)

cc_test(
    name = "pde_solver_test",
    srcs = ["pde_solver_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    # CPU-intensive: run exclusively to avoid contention
    tags = ["exclusive"],
    deps = [
        "//kokkos/src:pde_solver",
        "@googletest//:gtest_main",
        "@kokkos//:kokkos",
    ],
)

cc_test(
    name = "bspline_basis_test",
    srcs = ["bspline_basis_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    deps = [
        "//kokkos/src:bspline_basis",
        "@googletest//:gtest_main",
        "@kokkos//:kokkos",
    ],
)

cc_test(
    name = "american_option_test",
    srcs = ["american_option_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    # CPU-intensive: run exclusively to avoid contention
    tags = ["exclusive"],
    deps = [
        "//kokkos/src:american_option",
        "@googletest//:gtest_main",
        "@kokkos//:kokkos",
    ],
)

cc_test(
    name = "bspline_nd_test",
    srcs = ["bspline_nd_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    deps = [
        "//kokkos/src:bspline_nd",
        "@googletest//:gtest_main",
        "@kokkos//:kokkos",
    ],
)

cc_test(
    name = "batch_solver_test",
    srcs = ["batch_solver_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    # CPU-intensive: run exclusively to avoid contention
    tags = ["exclusive"],
    deps = [
        "//kokkos/src:batch_solver",
        "@googletest//:gtest_main",
        "@kokkos//:kokkos",
    ],
)

cc_test(
    name = "price_table_test",
    srcs = ["price_table_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    # CPU-intensive: run exclusively to avoid contention
    tags = ["exclusive"],
    deps = [
        "//kokkos/src:price_table",
        "@googletest//:gtest_main",
        "@kokkos//:kokkos",
    ],
)

cc_test(
    name = "root_finding_test",
    srcs = ["root_finding_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    deps = [
        "//kokkos/src:root_finding",
        "@googletest//:gtest_main",
        "@kokkos//:kokkos",
    ],
)

cc_test(
    name = "iv_solver_interpolated_test",
    srcs = ["iv_solver_interpolated_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    # CPU-intensive: run exclusively to avoid contention
    tags = ["exclusive"],
    deps = [
        "//kokkos/src:iv_solver_interpolated",
        "//kokkos/src:price_table",
        "@googletest//:gtest_main",
        "@kokkos//:kokkos",
    ],
)

cc_test(
    name = "iv_solver_fdm_test",
    srcs = ["iv_solver_fdm_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    # CPU-intensive: run exclusively to avoid contention
    tags = ["exclusive"],
    deps = [
        "//kokkos/src:iv_solver_fdm",
        "//kokkos/src:american_option",
        "@googletest//:gtest_main",
        "@kokkos//:kokkos",
    ],
)

cc_test(
    name = "pricing_pipeline_test",
    srcs = ["pricing_pipeline_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    # CPU-intensive: run exclusively to avoid contention
    tags = ["exclusive"],
    deps = [
        "//kokkos/src:pricing_pipeline",
        "@googletest//:gtest_main",
        "@kokkos//:kokkos",
    ],
)
