# Legacy C Benchmarks - NOT run in CI
#
# ⚠️  WARNING: These benchmarks are currently BROKEN ⚠️
#
# These benchmarks depend on legacy C code that is incomplete after PR #109
# migrated cubic_spline and tridiagonal solvers to modern C++. The following
# headers are missing from //legacy/src:
#   - cubic_spline.h
#   - tridiagonal.h
#
# These benchmarks are preserved for historical reference but cannot be built.
# All targets are marked as "manual" - they won't build unless explicitly requested.
#
# For working benchmarks, see //benchmarks:... (C++20 implementations)

cc_binary(
    name = "american_iv_benchmark",
    srcs = ["american_iv_benchmark.cc"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
    ],
    deps = [
        "//legacy/src:implied_volatility",
        "//legacy/src:american_option",
        "//legacy/src:lets_be_rational",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "batch_benchmark",
    srcs = ["batch_benchmark.cc"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp-simd",
    ],
    linkopts = ["-lgomp"],
    deps = [
        "//legacy/src:american_option",
        "//legacy/src:implied_volatility",
        "//legacy/src:lets_be_rational",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "quantlib_benchmark",
    srcs = ["quantlib_benchmark.cc"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
        "-march=native",
        "-ftree-vectorize",
    ],
    linkopts = ["-lQuantLib"],
    deps = [
        "//legacy/src:american_option",
        "//legacy/src:implied_volatility",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "interpolation_benchmark",
    srcs = ["interpolation_benchmark.cc"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
    ],
    deps = [
        "//legacy/src:iv_surface",
        "//legacy/src:interp_multilinear",
        "//legacy/src:interp_cubic",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "precompute_vs_fdm_benchmark",
    srcs = ["precompute_vs_fdm_benchmark.cc"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp-simd",
    ],
    linkopts = ["-lgomp"],
    deps = [
        "//legacy/src:price_table",
        "//legacy/src:american_option",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "accuracy_comparison",
    srcs = ["accuracy_comparison.cc"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
        "-fopenmp-simd",
    ],
    linkopts = ["-lgomp", "-lQuantLib"],
    deps = [
        "//legacy/src:price_table",
        "//legacy/src:american_option",
        "//legacy/src:interp_cubic",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "cache_benchmark",
    srcs = ["cache_benchmark.cc"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
    ],
    deps = [
        "//legacy/src:price_table",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "vega_interpolation_benchmark",
    srcs = ["vega_interpolation_benchmark.cc"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
    ],
    deps = [
        "//legacy/src:price_table",
        "@google_benchmark//:benchmark",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "vega_accuracy",
    srcs = ["vega_accuracy.cc"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
    ],
    deps = [
        "//legacy/src:price_table",
        "//legacy/src:american_option",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "gamma_accuracy",
    srcs = ["gamma_accuracy.cc"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
    ],
    deps = [
        "//legacy/src:price_table",
        "//legacy/src:american_option",
    ],
    tags = ["benchmark", "manual"],
)

cc_binary(
    name = "grid_spacing_accuracy",
    srcs = ["grid_spacing_accuracy.cc"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-ftree-vectorize",
    ],
    deps = [
        "//legacy/src:price_table",
        "//legacy/src:american_option",
        "//legacy/src:grid_presets",
    ],
    tags = ["benchmark", "manual"],
)
