# Legacy C utilities shared by legacy C code
# Modern C++ code should NOT depend on these (use src/ implementations)

# C cubic spline library (legacy - modern C++ uses src/cubic_spline_solver.hpp)
cc_library(
    name = "cubic_spline",
    srcs = ["cubic_spline.c"],
    hdrs = [
        "cubic_spline.h",
        "tridiagonal.h",
    ],
    copts = [
        "-std=c23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-fopenmp-simd",
        "-ftree-vectorize",
        "-DHAVE_SYSTEMTAP_SDT",
    ],
    deps = ["//common:ivcalc_trace_hdr"],
    visibility = ["//legacy:__subpackages__"],
    tags = ["manual"],  # Exclude from //... builds
)
