# Legacy C implementation - all targets marked as manual
# These won't be built in CI but can be built explicitly if needed
# Example: bazel build //legacy/src:pde_solver

cc_library(
    name = "grid_generation",
    srcs = ["grid_generation.c"],
    hdrs = ["grid_generation.h"],
    copts = [
        "-std=c23",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//legacy:__subpackages__"],
    tags = ["manual"],
)

cc_library(
    name = "grid_presets",
    srcs = ["grid_presets.c"],
    hdrs = ["grid_presets.h"],
    copts = [
        "-std=c23",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    deps = [":grid_generation"],
    visibility = ["//legacy:__subpackages__"],
    tags = ["manual"],
)

cc_library(
    name = "grid_transform",
    srcs = ["grid_transform.c"],
    hdrs = ["grid_transform.h"],
    copts = [
        "-std=c23",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    deps = [
        ":grid_presets",
        ":price_table",
    ],
    visibility = ["//legacy:__subpackages__"],
    tags = ["manual"],
)

cc_library(
    name = "pde_solver",
    srcs = ["pde_solver.c"],
    hdrs = ["pde_solver.h"],
    copts = [
        "-std=c23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-fopenmp-simd",
        "-ftree-vectorize",
        "-DHAVE_SYSTEMTAP_SDT",
    ],
    deps = [
        "//legacy/common:cubic_spline",
        "//common:ivcalc_trace_hdr",
    ],
    visibility = ["//legacy:__subpackages__"],
    tags = ["manual"],
)

cc_library(
    name = "american_option",
    srcs = ["american_option.c"],
    hdrs = ["american_option.h"],
    copts = [
        "-std=c23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-fopenmp",
        "-ftree-vectorize",
        "-DHAVE_SYSTEMTAP_SDT",
    ],
    linkopts = ["-fopenmp"],
    deps = [
        ":pde_solver",
        "//common:ivcalc_trace_hdr",
    ],
    strip_include_prefix = "",
    visibility = ["//legacy:__subpackages__"],
    tags = ["manual"],
)

cc_library(
    name = "lets_be_rational",
    srcs = ["lets_be_rational.c"],
    hdrs = ["lets_be_rational.h"],
    copts = [
        "-std=c23",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//legacy:__subpackages__"],
    tags = ["manual"],
)

cc_library(
    name = "implied_volatility",
    srcs = ["implied_volatility.c"],
    hdrs = [
        "implied_volatility.h",
        "brent.h",
        "price_table.h",
        "interp_strategy.h",
    ],
    copts = [
        "-std=c23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-DHAVE_SYSTEMTAP_SDT",
    ],
    deps = [
        ":american_option",
        ":lets_be_rational",
        ":price_table",
        "//common:ivcalc_trace_hdr",
    ],
    visibility = ["//legacy:__subpackages__"],
    tags = ["manual"],
)

cc_library(
    name = "validation",
    srcs = ["validation.c"],
    hdrs = ["validation.h"],
    copts = [
        "-std=c23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-DHAVE_SYSTEMTAP_SDT",
    ],
    deps = [
        ":american_option",
        ":implied_volatility",
        ":price_table",
        "//common:ivcalc_trace_hdr",
    ],
    visibility = ["//legacy:__subpackages__"],
    tags = ["manual"],
)

cc_library(
    name = "interp_cubic",
    srcs = [
        "interp_cubic.c",
        "interp_cubic_workspace.c",
    ],
    hdrs = [
        "interp_cubic.h",
        "interp_strategy.h",
        "iv_surface.h",
        "price_table.h",
        "american_option.h",
        "pde_solver.h",
        "cubic_spline.h",
        "tridiagonal.h",
    ],
    copts = [
        "-std=c23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-fopenmp-simd",
        "-ftree-vectorize",
    ],
    deps = [
        "//legacy/common:cubic_spline",
        "//common:ivcalc_trace_hdr",
    ],
    visibility = ["//legacy:__subpackages__"],
    tags = ["manual"],
)

cc_library(
    name = "iv_surface",
    srcs = ["iv_surface.c"],
    hdrs = [
        "iv_surface.h",
        "interp_strategy.h",
    ],
    copts = [
        "-std=c23",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    deps = [":interp_cubic", "//legacy/common:cubic_spline"],
    visibility = ["//legacy:__subpackages__"],
    tags = ["manual"],
)

cc_library(
    name = "price_table",
    srcs = ["price_table.c"],
    hdrs = [
        "price_table.h",
        "interp_strategy.h",
    ],
    copts = [
        "-std=c23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-fopenmp-simd",
        "-ftree-vectorize",
    ],
    deps = [
        ":interp_cubic",
        "//legacy/common:cubic_spline",
        ":american_option",
    ],
    visibility = ["//legacy:__subpackages__"],
    tags = ["manual"],
)
