cc_library(
    name = "grid",
    hdrs = ["grid.hpp"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "multigrid",
    hdrs = ["multigrid.hpp"],
    deps = [":grid"],
    copts = ["-std=c++20", "-Wall", "-Wextra"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "boundary_conditions",
    hdrs = ["boundary_conditions.hpp"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cache_config",
    hdrs = ["cache_config.hpp"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "workspace",
    hdrs = ["workspace.hpp"],
    deps = [":cache_config"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "spatial_operators",
    hdrs = ["spatial_operators.hpp"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "time_domain",
    hdrs = ["time_domain.hpp"],
    copts = ["-std=c++20", "-Wall", "-Wextra"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "trbdf2_config",
    hdrs = ["trbdf2_config.hpp"],
    copts = ["-std=c++20", "-Wall", "-Wextra"],
    visibility = ["//visibility:public"],
)
