cc_library(
    name = "snapshot",
    hdrs = ["snapshot.hpp"],
    copts = ["-std=c++20"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "snapshot_interpolator",
    hdrs = ["snapshot_interpolator.hpp"],
    deps = [
        "//src:cubic_spline",
    ],
    copts = ["-std=c++20"],
    visibility = ["//visibility:public"],
    # Ensure the cubic_spline C library is linked transitively
    linkopts = [],
)

cc_library(
    name = "price_table_snapshot_collector",
    hdrs = ["price_table_snapshot_collector.hpp"],
    deps = [
        ":snapshot",
        ":snapshot_interpolator",
    ],
    copts = ["-std=c++20"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "grid",
    hdrs = ["grid.hpp"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "multigrid",
    hdrs = ["multigrid.hpp"],
    deps = [":grid"],
    copts = ["-std=c++20", "-Wall", "-Wextra"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "boundary_conditions",
    hdrs = ["boundary_conditions.hpp"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cache_config",
    hdrs = ["cache_config.hpp"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "workspace",
    hdrs = ["workspace.hpp"],
    deps = [":cache_config"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "root_finding",
    hdrs = ["root_finding.hpp"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "newton_workspace",
    hdrs = ["newton_workspace.hpp"],
    deps = [":workspace"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "spatial_operators",
    hdrs = ["spatial_operators.hpp"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "black_scholes_operator",
    hdrs = ["black_scholes_operator.hpp"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "american_obstacle",
    hdrs = ["american_obstacle.hpp"],
    copts = [
        "-std=c++20",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "time_domain",
    hdrs = ["time_domain.hpp"],
    copts = ["-std=c++20", "-Wall", "-Wextra"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "trbdf2_config",
    hdrs = ["trbdf2_config.hpp"],
    copts = ["-std=c++20", "-Wall", "-Wextra"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "tridiagonal_solver",
    hdrs = ["tridiagonal_solver.hpp"],
    copts = ["-std=c++20", "-Wall", "-Wextra"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "pde_solver",
    hdrs = ["pde_solver.hpp"],
    deps = [
        ":grid",
        ":workspace",
        ":boundary_conditions",
        ":time_domain",
        ":trbdf2_config",
        ":tridiagonal_solver",
        ":newton_workspace",
        ":root_finding",
        ":snapshot",
    ],
    copts = ["-std=c++20", "-Wall", "-Wextra"],
    visibility = ["//visibility:public"],
)
